# kilopop

./: .buildinfo  .gitignore  README.md  acknowledging.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.html  requirements.txt  search.html  searchindex.js  setup.py  setup_hpc.py
.doctrees/: acknowledging.doctree  environment.pickle  index.doctree  installation.doctree  requirements.doctree
Tutorial/: maximal_trainging_data_request_for_Oleg.npy  maximal_training_data.csv  maximal_training_data_request_for_Oleg.npy  minimal_training_data.csv  minimal_training_data_request_for_Oleg.npy  notebook_example.ipynb  notebook_example_with_validation.ipynb  paper_plots.ipynb  script_example.py  traning_data_array.npy  usage_example.py  validation_data.csv
_modules/: index.html
_sources/: installation.txt
api/: kilopop.equation_of_state.compute_compactnesses_from_EOS.html  kilopop.equation_of_state.get_EOS_table.html  kilopop.equation_of_state.get_max_EOS_mass.html  kilopop.equation_of_state.get_radius_interpolator_from_EOS.html  kilopop.equation_of_state.html  kilopop.kilonovae.bns_kilonova.html  kilopop.kilonovae.bns_kilonovae_population_distribution.html  kilopop.kilonovae.html  kilopop.macronovae_wrapper.compute_planck_function.html  kilopop.macronovae_wrapper.create_saee_seds.html  kilopop.macronovae_wrapper.create_sed_timeseries.html  kilopop.macronovae_wrapper.html  kilopop.mappings.compute_equation_10.html  kilopop.mappings.compute_equation_4.html  kilopop.mappings.compute_equation_5.html  (+15 more)
(+136 files in other folders)
